# MovieHunter

./: .gitignore  LICENSE
client/: CMakeLists.txt
client/src/auth/: login.cpp  login.h
client/src/auth/login/: login.cpp  login.h  login.ui
client/src/auth/registration/: registration.cpp  registration.h  registration.ui
client/src/core/: main.cpp  moviehunter.cpp  moviehunter.h  moviehunter.ui
server/: prepare.sh  requirements.txt  settings.py
server/app/: __init__.py  models.py
server/app/api/genre/: genre.py
server/app/api/movies/: movies.py
server/app/api/users/: users.py
server/app/api/users/permissions/: role_permissions.py  user_permissions.py
server/app/raw_sql/: raw_sql.py
server/migrations/versions/: 029cff91ee6d_.py  1863efc72f62_.py  3b31c35ce6d9_.py  4e1d4dd95a2a_.py  5aafb52128c8_.py  6192a91962db_.py  6c8fe1eae9dc_.py  6d579362a5ec_.py  8cc643ccd1e2_.py  8ce3576ea3d3_.py  ba4ce1cb909d_.py  bc6e705595c9_.py  d11aa37aeb0f_.py  db476107399c_.py  e14eac0696da_.py  e620e5180201_.py
server/static/fixtures/: moviedb_public_alembic_version.json  moviedb_public_country.json  moviedb_public_genre.json  moviedb_public_logo.json  moviedb_public_movie.json  moviedb_public_movie_country.json  moviedb_public_movie_genre.json  moviedb_public_movie_producer.json  moviedb_public_producer.json  moviedb_public_rating.json  moviedb_public_url.json
